--- a/templates/preamble.tex
+++ b/templates/preamble.tex
@@ -43,7 +43,7 @@
 \newcommand{\Z}{\mathbb{Z}}
 \newcommand{\Q}{\mathbb{Q}}
 \newcommand{\R}{\mathbb{R}}
-\newcommand{\C}{\mathbb{C}}
+%\newcommand{\C}{\mathbb{C}}
 \renewcommand{\H}{\hat{H}}
 \newcommand{\intR}{\int_{-\infty}^{\infty}}
 
